# libgreat

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
firmware/: CMakeLists.txt
firmware/classes/: core.c  firmware.c
firmware/cmake/: compatibility.cmake  dfu.cmake  libgreat.cmake  libgreat_prelude.cmake  libopencm3.cmake  m0_coprocessor.cmake
firmware/cmake/platform/: lpc4330.cmake  lpc43xx.cmake
firmware/cmake/toolchain/: arm-cortex-m.cmake
firmware/drivers/: dac.c  ethernet.c  reset.c  scheduler.c  timer.c
firmware/drivers/comms/: comms_class.c  utils.c
firmware/drivers/dac/: ad970x.c
firmware/drivers/memory/: allocator.c  ringbuffer.c
firmware/drivers/uart/: ns16550.c
firmware/drivers/usb/lpc43xx/: usb.c
firmware/include/: scheduler.h  toolchain.h  toolchain_clang.h  toolchain_gcc.h
firmware/include/drivers/: comms_backend.h  dac.h  ethernet.h  gpio.h  reset.h  timer.h  uart.h
firmware/include/drivers/dac/: ad970x.h
firmware/include/drivers/memory/: allocator.h  ringbuffer.h
firmware/platform/lpc43xx/: CMakeLists.txt  crt0.c
firmware/platform/lpc43xx/drivers/: arm_system_control.c  arm_vectors.c  ethernet.c  gpio.c  platform_clock.c  platform_config.c  platform_dac.c  platform_reset.c  platform_timer.c  platform_uart.c  reset.c  scu.c  sgpio.S  sgpio.c  sgpio_data.c  sgpio_debug.c
firmware/platform/lpc43xx/drivers/usb/: comms_backend.c  usb.c  usb_host.c  usb_queue.c  usb_queue_host.c  usb_request.c  usb_standard_request.c
firmware/platform/lpc43xx/include/drivers/: arm_system_control.h  arm_vectors.h  platform_clock.h  platform_config.h  platform_dac.h  platform_dma.h  platform_gpio.h  platform_reset.h  platform_timer.h  platform_uart.h  platform_vectors.h  sct.h  scu.h  sgpio.h
firmware/platform/lpc43xx/include/drivers/ethernet/: platform.h
firmware/platform/lpc43xx/include/drivers/usb/: usb.h  usb_type.h
firmware/platform/lpc43xx/linker/: LPC4330_M4_memory.ld  LPC43xx_M0_memory.ld  LPC43xx_M4_memory.ld  LPC43xx_l0adable.ld  libgreat_lpc43xx.ld  libgreat_lpc43xx_m0.ld  libgreat_lpc43xx_rom_to_ram.ld
host/: README.md  pyproject.toml  setup.py
host/pygreat/: board.py  comms.py
host/pygreat/comms_backends/: usb.py  usb1.py
