[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygreat"
description = "Python library for talking with libGreat devices"
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "pyusb",
    "future",
    "backports.functools_lru_cache",
]

dynamic = ["version"]

[project.urls]
Documentation = "https://greatfet.readthedocs.io"
Repository    = "https://github.com/greatscottgadgets/libgreat"
Issues        = "https://github.com/greatscottgadgets/libgreat/issues"

[tool.setuptools-git-versioning]
enabled = true
starting_version = "2024.0.0"
